fixed overflow on credits

--- a/src/components/about/credits.css
+++ b/src/components/about/credits.css
@@ -1,7 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 
-.credits {
+.credits-container {
+    height: 90%;
+    width: 100%;
+    overflow: hidden;
     position: absolute;
+}
+
+.credits {
+    position: relative;
     left: 50%;
     width: 400px;
     margin-left: -200px;
